--- a/Proj_final_HMTL/Carqueja.html
+++ b/Proj_final_HMTL/Carqueja.html
@@ -43,22 +43,22 @@
             <div class="carrosel">    
                 <ul>
                     <li>
-                        <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Carqueja_1.jpg" width="500px" height="400px">
+                        <img src="../midia/image/Carqueja_1.jpg" width="500px" height="400px">
                     </li>
                     <li>
-                        <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Carqueja_2.png" width="500px"height="400px">
+                        <img src="../midia/image/Carqueja_2.png" width="500px"height="400px">
                     </li>
                     <li>
-                        <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Carqueja_3.png" width="500px"height="400px">
+                        <img src="../midia/image/Carqueja_3.png" width="500px"height="400px">
                     </li>
                     <li>
-                        <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Carqueja_4.png" width="500px"height="400px">
+                        <img src="../midia/image/Carqueja_4.png" width="500px"height="400px">
                     </li>
                     <li>
-                        <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Carqueja_5.png" width="500px"height="400px">
+                        <img src="../midia/image/Carqueja_5.png" width="500px"height="400px">
                     </li>
                     <li>
-                        <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Carqueja_6.png" width="500px"height="400px">
+                        <img src="../midia/image/Carqueja_6.png" width="500px"height="400px">
                     </li>
                 </ul>
                 
