--- a/Proj_final_HMTL/Cavalinha.html
+++ b/Proj_final_HMTL/Cavalinha.html
@@ -43,22 +43,22 @@
        <div class="carrosel">    
            <ul>
                <li>
-                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cavalinha_1.png" width="500px" height="400px">
+                <img src="../midia/image/Cavalinha_1.png" width="500px" height="400px">
             </li>
             <li>
-                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cavalinha_2.png" width="500px"height="400px">
+                <img src="../midia/image/Cavalinha_2.png" width="500px"height="400px">
             </li>
             <li>
-                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cavalinha_3.png" width="500px"height="400px">
+                <img src="../midia/image/Cavalinha_3.png" width="500px"height="400px">
             </li>
             <li>
-                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cavalinha_4.png" width="500px"height="400px">
+                <img src="../midia/image/Cavalinha_4.png" width="500px"height="400px">
             </li>
             <li>
-                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cavalinha_5.png" width="500px"height="400px">
+                <img src="../midia/image/Cavalinha_5.png" width="500px"height="400px">
             </li>
             <li>
-                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cavalinha_6.png" width="500px"height="400px">
+                <img src="../midia/image/Cavalinha_6.png" width="500px"height="400px">
                </li>
            </ul>
        </div>  
