--- a/Proj_final_HMTL/Cidreira.html
+++ b/Proj_final_HMTL/Cidreira.html
@@ -43,22 +43,22 @@
         <div class="carrosel">    
             <ul>
                 <li>
-                    <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cidreira_1.png" width="500px" height="400px">
+                    <img src="../midia/image/Cidreira_1.png" width="500px" height="400px">
                 </li>
                 <li>
-                    <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cidreira_2.png" width="500px"height="400px">
+                    <img src="../midia/image/Cidreira_2.png" width="500px"height="400px">
                 </li>
                 <li>
-                    <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cidreira_3.png" width="500px"height="400px">
+                    <img src="../midia/image/Cidreira_3.png" width="500px"height="400px">
                 </li>
                 <li>
-                    <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cidreira_4.png" width="500px"height="400px">
+                    <img src="../midia/image/Cidreira_4.png" width="500px"height="400px">
                 </li>
                 <li>
-                    <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cidreira_5.png" width="500px"height="400px">
+                    <img src="../midia/image/Cidreira_5.png" width="500px"height="400px">
                 </li>
                 <li>
-                    <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cidreira_6.png" width="500px"height="400px">
+                    <img src="../midia/image/Cidreira_6.png" width="500px"height="400px">
                 </li>
             </ul>
         </div>  
