--- a/Proj_final_HMTL/Guaco.html
+++ b/Proj_final_HMTL/Guaco.html
@@ -43,22 +43,22 @@
        <div class="carrosel">    
            <ul>
                <li>
-                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Guaco_1.png" width="500px" height="400px">
+                <img src="../midia/image/Guaco_1.png" width="500px" height="400px">
             </li>
             <li>
-                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Guaco_2.png" width="500px"height="400px">
+                <img src="../midia/image/Guaco_2.png" width="500px"height="400px">
             </li>
             <li>
-                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Guaco_3.png" width="500px"height="400px">
+                <img src="../midia/image/Guaco_3.png" width="500px"height="400px">
             </li>
             <li>
-                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Guaco_4.png" width="500px"height="400px">
+                <img src="../midia/image/Guaco_4.png" width="500px"height="400px">
             </li>
             <li>
-                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Guaco_5.png" width="500px"height="400px">
+                <img src="../midia/image/Guaco_5.png" width="500px"height="400px">
             </li>
             <li>
-                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Guaco_6.png" width="500px"height="400px">
+                <img src="../midia/image/Guaco_6.png" width="500px"height="400px">
                </li>
            </ul>
        </div>  
