--- a/Cidreira.html
+++ b/Cidreira.html
@@ -1,39 +1,77 @@
 <!DOCTYPE html>
 <html>
-    <head>       
-        <title>
-            Cidreira</title>
-            <style>    
-                body {
-                background-image: url('plano-de-fundo-com-plantas.png');
-                background-repeat: no-repeat;
-                background-attachment: fixed;
-                background-size: cover;
-                margin: 3cm;    
-                }    
-                p {
-                    text-align: justify;
-                }    
-            </style>
-            <meta http-equiv="refresh" content="30; Cidreira.html">
-            <meta name="keywords" content="" />
 
-    </head>
-    <body>
-        <h1></h1>
-        <h2></h2>
-            <img src="midia/image/Cidreira.jpg" weight=200px width=" 400px">   
-            <h3></h3>
+<head>       
+    <meta charset="utf-8">
+    <title>Cidreira</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="./midia/image/Logo_planta.png">
+</head>
 
-            <p><b><font size="6" face="arial" color="BLACK">CIDREIRA</font></b></p><br>
+<body>
 
-                <font size="4" color="black">  
+    <div class="container">
+
+		<!--────────────────Cabeçalho───────────────-->
+		<header>
+			<a class="logo">
+				<img src="./midia/image/Logo_planta.png" />
+			</a>
+			<nav>
+				<ul class="nav-bar">
+					<div class="bg"></div>
+                    <li><a class="nav-link" href=index.html>Home</a></li>
+				</ul>
+			</nav>
+		</header>
+    <main>
+
+		<!--─────────────────HomeCidreira────────────────-->
+		<div id="homeCarqueja">
+			<div class="filter"></div>
+			<section class="intro">
+				<h3>CIDREIRA
+                    <hr>
+				</h3>
+			</section>
+		</div>
+
+        <!--───────────────Conteudo───────────────-->   
+
+        <link href="carrosel.css" rel="stylesheet" type="text/css" />
+
+        <div class="carrosel">    
+            <ul>
+                <li>
+                    <img src="./midia/image/Cidreira_1.png" width="500px" height="400px">
+                </li>
+                <li>
+                    <img src="./midia/image/Cidreira_2.png" width="500px"height="400px">
+                </li>
+                <li>
+                    <img src="./midia/image/Cidreira_3.png" width="500px"height="400px">
+                </li>
+                <li>
+                    <img src="./midia/image/Cidreira_4.png" width="500px"height="400px">
+                </li>
+                <li>
+                    <img src="../midia/image/Cidreira_5.png" width="500px"height="400px">
+                </li>
+                <li>
+                    <img src="./midia/image/Cidreira_6.png" width="500px"height="400px">
+                </li>
+            </ul>
+        </div>  
+
+        <div class="filter"></div>
+        <section class="text">  
+
                     <p><b>Nome popular:</b> erva-cidreira, cidreira, melissa, chá-da-frança, coroa-de-rei, capim-cheiroso, capim-cidreira, limonete
-                    melissa-romana, salva-do-brasil.</p>
+                    melissa-romana, salva-do-brasil.</p><br>
 
-                    <p><b>Nome científico:</b><i> Melissa officinalis.</i></p>
+                    <p><b>Nome científico:</b><i> Melissa officinalis.</i></p><br>
                 
-                    <p><b>Família:</b> Lamiaceae.</p>
+                    <p><b>Família:</b> Lamiaceae.</p><br>
 
                     <p><b> Descrição:</b> A erva-cidreira é uma planta herbácea e perene, de reconhecido valor como aromática e medicinal.
                         Ela pertence à mesma família da hortelã e do manjericão e apresenta um típico perfume de limão nas folhas.
@@ -42,25 +80,31 @@
                         Os ramos são quadrangulares, ramificados e podem ser verdes ou avermelhados, mais eretos ou mais prostrados, de acordo com a cultivar.
                         Ocorre ainda uma cultivar de folhas amarelas, a “All Gold” e uma variegada de amarelo, a “Variegata”. Floresce na primavera e verão,
                         despontando flores pequenas, delicadas, de cor amarelo clara a lilás. Os frutos que se seguem são do tipo aquênio, oblongos e pardacentos. 
-                        A floração da erva-cidreira é muito atrativa para abelhas e borboletas.</p>
+                        A floração da erva-cidreira é muito atrativa para abelhas e borboletas.</p><br>
 
-                    <p><b> Regiões de cultivo:</b> Originária do Texas (EUA), também é cultivada no Caribe, México, América Central e América do Sul.</p> 
+                    <p><b> Regiões de cultivo:</b> Originária do Texas (EUA), também é cultivada no Caribe, México, América Central e América do Sul.</p><br> 
 
                     <p><b> Forma de cultivo:</b> Espaçamento de 50 x 70 cm entre plantas. Adapta bem a vários tipos de solos, com preferência por aqueles com boa drenagem, 
                         podendo ser plantada como bordadura de hortas. Recomenda-se uma adubação com esterco de gado bem curtido, de aves ou composto orgânico,
-                        quando necessário.</p>
+                        quando necessário.</p><br>
 
                     <p><b> Utilidade na medicina:</b> Folhas ou ramos são usadas como sedativo, em dores de cabeça e de dente, em estados gripais
-                        (como diaforético e tônico), em palpitações, em distúrbios gastrointestinais e menstruais, bem como em reumatismo.</p>
+                        (como diaforético e tônico), em palpitações, em distúrbios gastrointestinais e menstruais, bem como em reumatismo.</p><br>
 
                     <p><b> Contraindicações:</b> Gestantes, lactantes e pessoas com hipotireoidismo e hipotensão não devem fazer o consumo.
-                        Além disso, quem faz uso de calmantes e sedativos deve consultar o médico antes de tomar o chá.</p>
+                        Além disso, quem faz uso de calmantes e sedativos deve consultar o médico antes de tomar o chá.</p><br>
 
                     <p><b> Forma de aplicação:</b>  Deve adicionar as folhas de cidreira na água fervida, desligue o fogo e deixe por 20 minutos, após passado o tempo     
-                        adicione as folhas secas da planta e deixe tampado por 20 minutos, coe e beba 3 vezes ao dia.</p>
+                        adicione as folhas secas da planta e deixe tampado por 20 minutos, coe e beba 3 vezes ao dia.</p><br>
+                    <!--
+                    <p><b> Referências bibliográficas: .</p><br>     
+                    -->
+                    </section>
+                </div>
+            </div>
 
-                    https://www.jardineiro.net/plantas/erva-cidreira-melissa-officinalis.html
-                </font>
-    <body>
+            </main>
 
-</html>
+        <body>
+
+    </html>
