--- a/Carqueja.html
+++ b/Carqueja.html
@@ -1,69 +1,113 @@
 <!DOCTYPE html>
 <html>
-    <head>       
-        <title>
-            Carqueja</title>
-            <style>    
-                body {
-                background-image: url('plantas.jpg');
-                background-repeat: no-repeat;
-                background-attachment: fixed;
-                background-size: cover;
-                margin: 3cm;    
-                }       
-                p {
-                    text-align: justify;
-                }
-            </style>
-            <meta http-equiv="refresh" content="30; Carqueja.html">
-            <meta name="keywords" content="" />
-    </head>
-    <body>
 
-        <div id="teste">
+<head>       
+    <meta charset="utf-8">
+    <title>Carqueja</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="./midia/image/Logo_planta.png">
+</head>
 
-        <h1></h1>
-        <h2></h2>
-            <img src="midia/image/Carqueja.jpg" weight=200px width=" 400px">   
-            <h3></h3>
+<body>
 
-            <p><b><font size="6" face="arial" color="BLACK">CARQUEJA</font></b></p><br>
+    <div class="container">
 
-                <font size="4" color="black">  
-                    <p><b>Nome popular:</b> Carqueja-amargosa, carqueja, carqueja amarga, amargosa, vassoura, bacanta, carque.</p>
+		<!--────────────────Cabeçalho───────────────-->
+		<header>
+			<a class="logo">
+				<img src="./midia/image/Logo_planta.png" />
+			</a>
+			<nav>	
+                <ul class="nav-bar">
+                    <div class="bg"></div>
+                    <li><a class="nav-link" href=index.html>Home</a></li>
+                </ul>		
+			</nav>
+		</header>
+    <main>
 
-                    <p><b>Nome científico:</b><i> Baccharis genistelloides. </i></p>
+		<!--─────────────────Home────────────────-->
+		<div id="homeCarqueja">
+			<div class="filter"></div>
+			<section class="intro">
+				<h3>CARQUEJA
+                    <hr>
+				</h3>
+			</section>
+		</div>
+
+        <!--───────────────Conteudo───────────────-->   
+
+        <link href="carrosel.css" rel="stylesheet" type="text/css" />
+
+            <div class="carrosel">    
+                <ul>
+                    <li>
+                        <img src="./midia/image/Carqueja_1.jpg" width="500px" height="400px">
+                    </li>
+                    <li>
+                        <img src="./midia/image/Carqueja_2.png" width="500px"height="400px">
+                    </li>
+                    <li>
+                        <img src="./midia/image/Carqueja_3.png" width="500px"height="400px">
+                    </li>
+                    <li>
+                        <img src="./midia/image/Carqueja_4.png" width="500px"height="400px">
+                    </li>
+                    <li>
+                        <img src="./midia/image/Carqueja_5.png" width="500px"height="400px">
+                    </li>
+                    <li>
+                        <img src="./midia/image/Carqueja_6.png" width="500px"height="400px">
+                    </li>
+                </ul>
                 
-                    <p><b>Família:</b> Asteraceae (Compositae).</p>
+            </div>  
 
-                    <p><b> Descrição:</b> A carqueja é uma erva espontânea em terrenos baldios e pastos, sendo por muitas vezes considerada daninha. 
-                        Ela não possui folhas verdadeiras e suas hastes são ramificadas e apresentam asas membranáceas, descontínuas e verdes, 
-                        responsáveis pela fotossíntese da planta. As flores são branco-amareladas e surgem em pequenos tufos na primavera e verão. 
-                        Não deve ser confundida com a carqueja de Portugal, a Pterospartum tridentatum, de utilizações medicinais também, além de culinárias.
-                        A carqueja é muito rústica e de fácil cultivo, além de interessante no paisagismo pelo seu aspecto diferente. 
-                        Pode ser plantada em vasos e jardineiras, assim como em canteiros adubados, onde forma pequenas moitas arredondadas e compactas. 
-                        É muito utilizada em chás emagrecedores e no chimarrão gaúcho. Presta-se também a aromatização de licores e vinhos e à fabricação
-                        de vassouras rústicas.</p>
+	        <div class="filter"></div>
+            <section class="text">   
 
-                    <p><b> Regiões de cultivo:</b> Nativa dos campos e beiras de matas do Brasil, ocorre no sul (Paraná, Santa Catarina e Rio Grande do Sul),
-                        no sudeste (Espírito Santo, Minas Gerais, Rio de Janeiro e São Paulo), no centro-oeste (Distrito Federal, Goiás e Mato Grosso do Sul)
-                        e no nordeste (Bahia, Ceará e Pernambuco). Em países como Uruguai, Argentina, Paraguai e Bolívia também há ocorrência da planta.</p>
+            <p><b>Nome popular:</b> Carqueja-amargosa, carqueja, carqueja amarga, amargosa, vassoura, bacanta, carque.</p><br><br> 
 
-                    <p><b> Forma de cultivo:</b> Espaçamento de 30x30 cm entre plantas. Pode ser cultivada em regiões com até 800 de altitude.
-                        Adapta bem a vários tipos de solo, crescendo abundantemente em regiões de campos e pastagens em todo o país,
-                        recomendando-se uma adubação com esterco de gado bem curtido, esterco de aves e composto orgânico, quando necessário.</p>
+            <p><b>Nome científico:</b><i> Baccharis genistelloides. </i></p><br><br> 
+        
+            <p><b>Família:</b> Asteraceae (Compositae).</p><br><br> 
 
-                    <p><b> Utilidade na medicina:</b> A carqueja reduz as taxas de açúcar no sangue e tem propriedades anti-úlcera e anti-inflamatórias,
-                        o que ajuda no tratamento de artrites.</p>
+            <p><b> Descrição:</b> A carqueja é uma erva espontânea em terrenos baldios e pastos, sendo por muitas vezes considerada daninha. 
+                Ela não possui folhas verdadeiras e suas hastes são ramificadas e apresentam asas membranáceas, descontínuas e verdes, 
+                responsáveis pela fotossíntese da planta. As flores são branco-amareladas e surgem em pequenos tufos na primavera e verão. 
+                Não deve ser confundida com a carqueja de Portugal, a Pterospartum tridentatum, de utilizações medicinais também, além de culinárias.
+                A carqueja é muito rústica e de fácil cultivo, além de interessante no paisagismo pelo seu aspecto diferente. 
+                Pode ser plantada em vasos e jardineiras, assim como em canteiros adubados, onde forma pequenas moitas arredondadas e compactas. 
+                É muito utilizada em chás emagrecedores e no chimarrão gaúcho. Presta-se também a aromatização de licores e vinhos e à fabricação
+                de vassouras rústicas.</p><br><br> 
 
-                    <P><b> Contraindicações:</b> Grávidas não devem se utilizar da planta, pois ela pode promover contrações uterinas. Deve-se evitar
-                        o usoconcomitante com medicamentos para hipertensão e diabetes, pois pode causar hipotensão. Em caso de hipersensibilidade,
-                        recomenda-se descontinuar o uso.</P>   
+            <p><b> Regiões de cultivo:</b> Nativa dos campos e beiras de matas do Brasil, ocorre no sul (Paraná, Santa Catarina e Rio Grande do Sul),
+                no sudeste (Espírito Santo, Minas Gerais, Rio de Janeiro e São Paulo), no centro-oeste (Distrito Federal, Goiás e Mato Grosso do Sul)
+                e no nordeste (Bahia, Ceará e Pernambuco). Em países como Uruguai, Argentina, Paraguai e Bolívia também há ocorrência da planta.</p><br><br> 
 
-                    <P><b> Forma de aplicação:</b> Para auxiliar na digestão, prepare um chá com 1 colher de sopa da erva para cada xícara de água
-                        e tome até 3 vezes ao dia.</P>
-                </font>
-        </div>        
-    <body>
+            <p><b> Forma de cultivo:</b> Espaçamento de 30x30 cm entre plantas. Pode ser cultivada em regiões com até 800 de altitude.
+                Adapta bem a vários tipos de solo, crescendo abundantemente em regiões de campos e pastagens em todo o país,
+                recomendando-se uma adubação com esterco de gado bem curtido, esterco de aves e composto orgânico, quando necessário.</p><br><br> 
+
+            <p><b> Utilidade na medicina:</b> A carqueja reduz as taxas de açúcar no sangue e tem propriedades anti-úlcera e anti-inflamatórias,
+                o que ajuda no tratamento de artrites.</p><br><br> 
+
+            <p><b> Contraindicações:</b> Grávidas não devem se utilizar da planta, pois ela pode promover contrações uterinas. Deve-se evitar
+                o usoconcomitante com medicamentos para hipertensão e diabetes, pois pode causar hipotensão. Em caso de hipersensibilidade,
+                recomenda-se descontinuar o uso.</p><br><br>    
+
+            <p><b> Forma de aplicação:</b> Para auxiliar na digestão, prepare um chá com 1 colher de sopa da erva para cada xícara de água
+                e tome até 3 vezes ao dia.</p><br><br> 
+                <!--
+                    <p><b> Referências bibliográficas: .</p><br>     
+                -->
+            </section>
+        </div>
+    </div>
+
+    </main>
+
+<body>
 
 </html>
