--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>site</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
-	<link rel="icon" href="../midia/image/Logo_planta.png">
+	<link rel="icon" href="./midia/image/Logo_planta.png">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 		<!--────────────────Cabeçalho───────────────-->
 		<header>
 			<a class="logo">
-				<img src="../midia/image/Logo_planta.png" />
+				<img src="./midia/image/Logo_planta.png" />
 			</a>
 			<nav>
 				<ul class="nav-bar">
@@ -54,37 +54,37 @@
 
 						<!--───────────────paginas───────────────-->
 						<div class="pag">
-							<img class="work-img" src="../midia/image/Babosa.jfif">
+							<img class="work-img" src="./midia/image/Babosa.jfif">
 							<a href="" target="_blank"> <!--Link-->
 								<A HREF=Babosa.html><div class="work-content">Babosa<br>clique para saber mais.</div></A>
 							</a>
 						</div>
 						<div class="pag">
-							<img class="work-img" src="../midia/image/Carqueja.jfif">
+							<img class="work-img" src="./midia/image/Carqueja.jfif">
 							<a href="" target="_blank"> <!--Link-->
 								<A HREF=Carqueja.html><div class="work-content">Carqueja<br>clique para saber mais.</div></A>
 							</a>
 						</div>
 						<div class="pag">
-							<img class="work-img" src="../midia/image/Cavalinha.jfif">
+							<img class="work-img" src="./midia/image/Cavalinha.jfif">
 							<a href="" target="_blank"> <!--Link-->
 								<A HREF=Cavalinha.html><div class="work-content">Cavalinha<br>clique para saber mais.</div></A>
 							</a>
 						</div>
 						<div class="pag">
-							<img class="work-img" src="../midia/image/Cidreira.jfif">
+							<img class="work-img" src="./midia/image/Cidreira.jfif">
 							<a href="" target="_blank"> <!--Link-->
 								<A HREF=Cidreira.html><div class="work-content">Cidreira<br>clique para saber mais.</div></A>
 							</a>
 						</div>
 						<div class="pag">
-							<img class="work-img" src="../midia/image/Guaco.jfif">
+							<img class="work-img" src="./midia/image/Guaco.jfif">
 							<a href="" target="_blank"> <!--Link-->
 								<A HREF=Guaco.html><div class="work-content">Guaco<br>clique para saber mais.</div></A>
 							</a>
 						</div>
 						<div class="pag">
-							<img class="work-img" src="../midia/image/Malva.jfif">
+							<img class="work-img" src="./midia/image/Malva.jfif">
 							<a href="" target="_blank"> <!--Link-->
 								<A HREF=Malva.html><div class="work-content">Malva<br>clique para saber mais.</div></A>
 							</a>
@@ -103,13 +103,13 @@
 					Aqui estão algumas redes sociais que estamos presentes</p>
 				<div class="social-media">
 					<a href="https://www.youtube.com/" target="_blank"><img class='logo-rede'
-							src="../midia/image/Logo_Youtube.png">
+							src="./midia/image/Logo_Youtube.png">
 						</i></a>
 					<a href="https://www.facebook.com/" target="_blank"><img class='logo-rede'
-							src="../midia/image/Logo_Facebook.png"> </i></a>
+							src="./midia/image/Logo_Facebook.png"> </i></a>
 
 					<a href="https://www.instagram.com/" target="_blank"><img class='logo-rede'
-							src="../midia/image/Logo_Instagram.png"> </i></a>
+							src="./midia/image/Logo_Instagram.png"> </i></a>
 				</div>
 			</div>
 			<!--──────────────Desencolvimento────────────────-->
